--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <button type="submit">Search</button>
       </form>
       <ul class="gallery"></ul>
-      <div class="loader hidden"></div>
+      <span class="loader hidden"></span>
     </main>
 
     <script type="module" src="./main.js"></script>
